k8s/minio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/msi-k8s-default: "true"
        io.kompose.service: minio
    spec:
      containers:
        - env:
            - name: MINIO_ROOT_PASSWORD
              value: minioadmin
            - name: MINIO_ROOT_USER
              value: minioadmin
          image: jakepel03/musify-minio:1.0
          name: minio
          ports:
            - containerPort: 9000
              hostPort: 9000
              protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: minio-storage-volume
      restartPolicy: Always
      volumes:
        - name: minio-storage-volume
          persistentVolumeClaim:
            claimName: minio-storage-claim
status: {}
