k8s/nginx-v2-rolling.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.musify.service: nginx
  name: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      com.musify.service: nginx
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        com.musify.service: nginx
    spec:
      containers:
        - iamge: jakepel03/musify-nginx:2.0
          name: nginx
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always
