k8s/express.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.musify.service: express
  name: express
spec:
  replicas: 3
  selector:
    matchLabels:
      com.musify.service: express
  template:
    metadata:
      labels:
        com.musify.service: express
    spec:
      containers:
        - image: mvintar/musify-express:latest
          name: express
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /livez
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always

---
# service
apiVersion: v1
kind: Service
metadata:
  labels:
    com.musify.service: express
  name: express
spec:
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    com.musify.service: express
