k8s/minio.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.musify.service: minio
  name: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      com.musify.service: minio
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.musify.service: minio
    spec:
      containers:
        - image: jakepel03/musify-minio:1.0
          name: minio
          ports:
            - containerPort: 9000
          volumeMounts:
            - mountPath: /data
              name: minio-storage-volume
      restartPolicy: Always
      volumes:
        - name: minio-storage-volume
          persistentVolumeClaim:
            claimName: minio-storage-claim

---
# service
apiVersion: v1
kind: Service
metadata:
  labels:
    com.musify.service: minio
  name: minio
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 9000
  type: ClusterIP
  selector:
    com.musify.service: minio
