k8s/minioclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ../docker-compose.yml convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: minioclient
  name: minioclient
spec:
  selector:
    io.kompose.service: minioclient
status:
  loadBalancer: {}
