k8s/nginx-v2-bluegreen.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.musify.service: nginx-v2
  name: nginx-v2
spec:
  replicas: 3
  selector:
    matchLabels:
      com.musify.service: nginx-v2
  template:
    metadata:
      labels:
        com.musify.service: nginx-v2
    spec:
      containers:
        - image: jakepel03/musify-nginx:2.0
          name: nginx-v2
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
      restartPolicy: Always

---
# service
apiVersion: v1
kind: Service
metadata:
  labels:
    com.musify.service: nginx-v2
  name: nginx-v2
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 80
  selector:
    com.musify.service: nginx-v2
