k8s/postgres.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    com.musify.service: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      com.musify.service: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        com.musify.service: postgres
    spec:
      containers:
        - image: jakepel03/musify-db:1.0
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage-volume
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - name: postgres-storage-volume
          persistentVolumeClaim:
            claimName: postgres-storage-claim

---
# service
apiVersion: v1
kind: Service
metadata:
  labels:
    com.musify.service: postgres
  name: postgres
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  type: ClusterIP
  selector:
    com.musify.service: postgres
