k8s/ingress.yml
# ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: musify-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx # change this to nging-v2 for blue green
                port:
                  number: 80
